# 2025-2S-EDD-Practica-1

./: CMakeLists.txt  Makefile  main.cpp
core/: io.cpp  io.hpp  util.hpp
ds/: linked_list.hpp  queue.hpp  stack.hpp
game/: board.cpp  board.hpp  edge.hpp  engine.cpp  engine.hpp  player.hpp  powerups.hpp  square.hpp  turn_manager.hpp
